fixed the z-index of the header

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,6 +13,7 @@ $action-color: $green;
   box-sizing: border-box;
 
   .header {
+    z-index: 1;
     width: 100%;
     position: fixed;
     background-color: black;
